Full code review and add checkstyle, spotbugs, jacoco(test coverage), and dependency vulnerability scan